--- a/final/index.html
+++ b/final/index.html
@@ -10,18 +10,19 @@
 <body>
 	<div class="column">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/TTR_mS13t9g?si=Sl1g2MAzVlhKiou1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
-		3.Chow chows can have 4-6 pupies <br>
-		4.Male Chowchows can be 18-20 inches <br>
-		5.A full grown Chow chows are about 17-20 inches tall <br>
-		6.Chow chows have blue tongues <br>
-		7.Chow Chows are loyal, independent, and intelligent <br>
-		9.They are very fluffy <br>
-		10.Chow chows <br>
+		<h1>3.Chow chows can have 4-6 pupies</h1> <br>
+		<h1>4.Male Chowchows can be 18-20 inches</h1> <br>
+		<h1>5.A full grown Chow chows are about 17-20 inches tall</h1> <br>
+		<h1>6.Chow chows have blue tongues</h1> <br>
+		<h1>7.Chow Chows are loyal, independent, and intelligent</h1> <br>
+		<h1>9.They are very fluffy</h1> <br>
+		<h1>10.Chow chows have 2 kinds of fur a rough and soft</h1> <br>
 	</div>
 
 	<div class="column">
-		1.Chow chows are in many colors such as Red, Black, Blue, Cinnamon, and cream <br>
-		2.Chow chows can cost up to $600-$1,500 <br>
+		<h1>1.Chow chows are in many colors such as Red, Black, Blue, Cinnamon, and cream</h1> <br>
+		<h1>2.Chow chows can cost up to $600-$1,500</h1><br>
+		<img src="assets/photo2chowchow.jpg">
 	</div>
 
 </body>
